<resources>
    <string name="app_name">Espresso</string>
    <string name="click_on_me">Нажми меня</string>
    <string name="hello_sber">Hello Sberbank</string>
    <string name="hello_world">Hello World!</string>
    <string name="hello_google">Hello Google</string>
</resources>
